makes basic calculator ui

--- a/index.html
+++ b/index.html
@@ -3,10 +3,56 @@
   <head>
     <meta charset="utf-8">
     <title>Calculator</title>
-  </head>
-  <body>
-    <h1>Calculator</h1>
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
 
+  </head>
+  <body>
+    <div class="container">
+
+      <div class="panel panel-success">
+        <div class="panel-heading">
+          <h2>Calculator</h2>
+        </div>
+        <div class="panel-body">
+          <form id="calcForm">
+            <div class="form-group">
+              <h3><label id="heading" for="firstNumber">First Number:</label></h3>
+              <input class="form-control form-control-lg" id="firstNumber" type="text" placeholder="Any Number">
+            </div>
+            <div class="form-group">
+              <h3><label id="heading" for="secondNumber">Second Number:</label></h3>
+              <input class="form-control form-control-lg" id="secondNumber" type="text" placeholder="Any Number">
+            </div>
+            <div id="radio-block">
+                <label class="radio-inline">
+                  <input type="radio" name="operation" value="0" checked>
+                  <span class="glyphicon glyphicon-plus"></span>
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="operation" value="1">
+                  <span class="glyphicon glyphicon-minus"></span>
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="operation" value="2">
+                  <span class="glyphicon glyphicon-asterisk"></span>
+                </label>
+                <label class="radio-inline">
+                  <input type="radio" name="operation" value="3">
+                  <span class="glyphicon glyphicon-pencil"></span>
+                </label>
+            </div>
+              <button class="btn btn-default btn-lg" type="submit">Calculate</button>
+          </form>
+          <div class="well" id="result">
+            <h3>= <span id="output"></span></h3>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
